--- a/djproject/index.html
+++ b/djproject/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE>
 <html>
 	<head>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="viewport"content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0"/>
+		<meta charset="UTF-8" name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0"/>
 		<title></title>
 		<link rel="stylesheet" href="bootstrap-3.3.5-dist/css/bootstrap.css"/>
 		<link rel="stylesheet" href="css/page.css"/>
-		<script src="jquery-2.1.1/jquery.min.js" type="text/javascript" charset="utf-8"></script>
-		<script src="bootstrap-3.3.5-dist/js/bootstrap.js" type="text/javascript" charset="utf-8"></script>
-		<script src="js/jqPaginator.js" type="text/javascript" charset="utf-8"></script>
+		<script src="jquery-2.1.1/jquery.min.js" type="text/javascript"></script>
+		<script src="bootstrap-3.3.5-dist/js/bootstrap.js" type="text/javascript"></script>
+		<script src="js/jqPaginator.js" type="text/javascript"></script>
 	</head>
 	<body>
 		<div class="container-fluid hpage">
