--- a/richard/zroHtml.html
+++ b/richard/zroHtml.html
@@ -28,7 +28,7 @@
             这是一个很长的段落，这是一个很长的段落这是一个很长的段落，这是一个很长的段落这是一个很长的段落，这是一个很长的段落这是一个很长的段落，这是一个很长的段落
         </p>
 
-        <img src="image/美女.jpg">
+        <img src="image/girl.jpg">
 
         <p>这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落
         <br/>换行了<br/>
@@ -53,7 +53,7 @@
             这是一个很长的段落，这是一个很长的段落，<a href="http://ife.baidu.com">这里有一个链接接到http://ife.baidu.com</a>这是一个很长的段落，这是一个很长的段落，<strong>这里有个粗体字</strong><br/>
             这是一个很长的段落，这是一个很长的段落这是一个很长的段落，这是一个很长的段落这是一个很长的段落，这是一个很长的段落这是一个很长的段落，这是一个很长的段落
         </p>
-        <img src="image/美女.jpg">
+        <img src="image/girl.jpg">
             <ul>
                 <li>列表项目一</li>
                 <li>列表项目二</li>
@@ -66,31 +66,31 @@
 
             <section>
                 好看的图片<br/>
-                <img src="image/美女.jpg">
+                <img src="image/girl.jpg">
             </section>
             <section>
                 好看的图片<br/>
-                <img src="image/美女.jpg">
+                <img src="image/girl.jpg">
             </section>
             <section>
             好看的图片<br/>
-            <img src="image/美女.jpg">
+            <img src="image/girl.jpg">
             </section>
             <section>
                 好看的图片<br/>
-                <img src="image/美女.jpg">
+                <img src="image/girl.jpg">
             </section>
             <section>
                 好看的图片<br/>
-                <img src="image/美女.jpg">
+                <img src="image/girl.jpg">
             </section>
             <section>
                 好看的图片<br/>
-                <img src="image/美女.jpg">
+                <img src="image/girl.jpg">
             </section>
             <section>
                 好看的图片<br/>
-                <img src="image/美女.jpg">
+                <img src="image/girl.jpg">
             </section>
         </section>
     </article>
