fixed a bug about image.

--- a/richard/zroHtml.html
+++ b/richard/zroHtml.html
@@ -28,7 +28,7 @@
             这是一个很长的段落，这是一个很长的段落这是一个很长的段落，这是一个很长的段落这是一个很长的段落，这是一个很长的段落这是一个很长的段落，这是一个很长的段落
         </p>
 
-        <img src="image/girl.jpg">
+        <img src="Image/girl.jpg">
 
         <p>这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落
         <br/>换行了<br/>
@@ -74,23 +74,23 @@
             </section>
             <section>
             好看的图片<br/>
-            <img src="image/girl.jpg">
+            <img src="Image/girl.jpg">
             </section>
             <section>
                 好看的图片<br/>
-                <img src="image/girl.jpg">
+                <img src="Image/girl.jpg">
             </section>
             <section>
                 好看的图片<br/>
-                <img src="image/girl.jpg">
+                <img src="Image/girl.jpg">
             </section>
             <section>
                 好看的图片<br/>
-                <img src="image/girl.jpg">
+                <img src="Image/girl.jpg">
             </section>
             <section>
                 好看的图片<br/>
-                <img src="image/girl.jpg">
+                <img src="Image/girl.jpg">
             </section>
         </section>
     </article>
