--- a/djproject/article.html
+++ b/djproject/article.html
@@ -8,6 +8,7 @@
 		<script src="jquery-2.1.1/jquery.min.js" type="text/javascript"></script>
 		<script src="bootstrap-3.3.5-dist/js/bootstrap.js" type="text/javascript"></script>
 		<script src="js/jqPaginator.js" type="text/javascript"></script>
+		<script src="layer/layer.js" type="text/javascript"></script>
 	</head>
 	<body>
 		<div class="container-fluid hpage">
@@ -21,6 +22,7 @@
 						</a>
 					</div>
 	  			</div>
+	  			<div class="login"></div>
 			</div>
 			<div class="row hcontainer">
 				<div class="row daohang">
@@ -90,17 +92,30 @@
 								</p>
 							</div>
 						</div>
-						<div class="article_link">
-							<div><span>上一篇：</span><a href="#">无</a></div>
-							<div><span>下一篇：</span><a href="#">PHP超级全局变量、魔术变量和魔术函数</a></div>
-						</div>
 					</div>
 					<div class="row right-con col-xs-8 col-md-8">
 						<div class="module-right">
 							<span class="title-right">关于我们</span>
 							<p>1、PHP程序员雷雪松的博客主要记录了Linux学习，PHP开发与编程，Web前端开发，MySQL学习和教程，NoSQL数据库教程以及个人的人生经历和观点。一个人的力量是有限的，但我们尽量不要去重复造轮子，分享更多知识给身边的朋友。</p>
-							<p>2、欢迎志同道合的PHP爱好者点击加入PHP程序员交流QQ群：PHP学习交流群！</p>
+							<p>
+								2、欢迎志同道合的PHP爱好者点击加入PHP程序员交流QQ群：<a target="_blank" href="http://shang.qq.com/wpa/qunwpa?idkey=8028785edba3d6c77c7e75f5829e2735ca7a28b4d00fbde8879d07e26f54c0cc"><img border="0" src="http://pub.idqqimg.com/wpa/images/group.png" alt="web测试" title="web测试"></a>
+							</p>
 							<p>3、如果觉得PHP程序员雷雪松的博客还不错可以把链接分享给身边的朋友、打赏任意金额或者支持下赞助的广告！</p>
+							<p>
+								<span>4、分享本页</span>
+								<div>
+									<div class="jiathis_style">
+										<a class="jiathis_button_qzone"></a>
+										<a class="jiathis_button_tsina"></a>
+										<a class="jiathis_button_tqq"></a>
+										<a class="jiathis_button_weixin"></a>
+										<a class="jiathis_button_renren"></a>
+									</div>
+								</div>
+							</p>
+							<p>5、有什么问题，请联系我们：
+								<a target="_blank" href="http://sighttp.qq.com/authd?IDKEY=02f31b91f66909dab361ec0ae47017131836dbd6572f62f0"><img border="0" src="http://wpa.qq.com/imgd?IDKEY=02f31b91f66909dab361ec0ae47017131836dbd6572f62f0&pic=51" alt="点击这里给我发消息" title="点击这里给我发消息"></a>
+							</p>
 						</div>
 						<div class="module-right">
 							<span class="select">搜索：</span>
@@ -151,7 +166,7 @@
 				<span>web交流网站|QQ群：1234567</span>
 			</div>
 		</div>
-		
+		<script type="text/javascript" src="http://v3.jiathis.com/code/jia.js" charset="utf-8"></script>
 		<script src="js/homepage.js" type="text/javascript" charset="utf-8"></script>
 	</body>
 </html>
