--- a/djproject/index.html
+++ b/djproject/index.html
@@ -88,7 +88,11 @@
 							<span class="title-right">关于我们</span>
 							<p>1、PHP程序员雷雪松的博客主要记录了Linux学习，PHP开发与编程，Web前端开发，MySQL学习和教程，NoSQL数据库教程以及个人的人生经历和观点。一个人的力量是有限的，但我们尽量不要去重复造轮子，分享更多知识给身边的朋友。</p>
 							<p>
-								2、欢迎志同道合的PHP爱好者点击加入PHP程序员交流QQ群：<a target="_blank" href="http://shang.qq.com/wpa/qunwpa?idkey=8028785edba3d6c77c7e75f5829e2735ca7a28b4d00fbde8879d07e26f54c0cc"><img border="0" src="http://pub.idqqimg.com/wpa/images/group.png" alt="web测试" title="web测试"></a>
+								2、欢迎志同道合的PHP爱好者点击加入PHP程序员交流QQ群：
+								<div class="client">
+									<a class="PC" target="_blank" href="http://shang.qq.com/wpa/qunwpa?idkey=8028785edba3d6c77c7e75f5829e2735ca7a28b4d00fbde8879d07e26f54c0cc"><img border="0" src="http://pub.idqqimg.com/wpa/images/group.png" alt="web测试" title="web测试"></a>
+									<a class="phone" target="_blank" href="mqqapi://card/show_pslcard?src_type=internal&version=1&uin=49890125&card_type=group&source=qrcode"><img border="0" src="http://pub.idqqimg.com/wpa/images/group.png" alt="web测试" title="web测试"></a>
+								</div>
 							</p>
 							<p>3、如果觉得PHP程序员雷雪松的博客还不错可以把链接分享给身边的朋友、打赏任意金额或者支持下赞助的广告！</p>
 							<p>
@@ -104,7 +108,10 @@
 								</div>
 							</p>
 							<p>5、有什么问题，请联系我们：
-								<a target="_blank" href="http://sighttp.qq.com/authd?IDKEY=02f31b91f66909dab361ec0ae47017131836dbd6572f62f0"><img border="0" src="http://wpa.qq.com/imgd?IDKEY=02f31b91f66909dab361ec0ae47017131836dbd6572f62f0&pic=51" alt="点击这里给我发消息" title="点击这里给我发消息"></a>
+								<div class="client">
+									<a class="PC" target="_blank" href="http://sighttp.qq.com/authd?IDKEY=02f31b91f66909dab361ec0ae47017131836dbd6572f62f0"><img border="0" src="http://wpa.qq.com/imgd?IDKEY=02f31b91f66909dab361ec0ae47017131836dbd6572f62f0&pic=51" alt="点击这里给我发消息" title="点击这里给我发消息"></a>
+									<a class="phone" target="_blank" href="mqqwpa://im/chat?chat_type=wpa&uin=12345678&version=1&src_type=web&web_src=oicqzone.com"><img border="0" src="http://wpa.qq.com/imgd?IDKEY=02f31b91f66909dab361ec0ae47017131836dbd6572f62f0&pic=51" alt="点击这里给我发消息" title="点击这里给我发消息"></a>
+								</div>
 							</p>
 						</div>
 						<div class="module-right">
