--- a/djproject/index.html
+++ b/djproject/index.html
@@ -90,27 +90,28 @@
 							<p>
 								2、欢迎志同道合的PHP爱好者点击加入PHP程序员交流QQ群：
 								<div class="client">
-									<a class="PC" target="_blank" href="http://shang.qq.com/wpa/qunwpa?idkey=8028785edba3d6c77c7e75f5829e2735ca7a28b4d00fbde8879d07e26f54c0cc"><img border="0" src="http://pub.idqqimg.com/wpa/images/group.png" alt="web测试" title="web测试"></a>
-									<a class="iPhone" target="_blank" href="mqqapi://card/show_pslcard?src_type=internal&version=1&uin=498901255&card_type=group&source=qrcode"><img border="0" src="http://pub.idqqimg.com/wpa/images/group.png" alt="web测试" title="web测试"></a>
+									<a class="PC child" target="_blank" href="http://shang.qq.com/wpa/qunwpa?idkey=8028785edba3d6c77c7e75f5829e2735ca7a28b4d00fbde8879d07e26f54c0cc"><img border="0" src="http://pub.idqqimg.com/wpa/images/group.png" alt="web测试" title="web测试"></a>
+									<a class="iPhone child" target="_blank" href="mqqapi://card/show_pslcard?src_type=internal&version=1&uin=498901255&card_type=group&source=qrcode"><img border="0" src="http://pub.idqqimg.com/wpa/images/group.png" alt="web测试" title="web测试"></a>
 								</div>
 							</p>
 							<p>3、如果觉得PHP程序员雷雪松的博客还不错可以把链接分享给身边的朋友、打赏任意金额或者支持下赞助的广告！</p>
 							<p>
 								<span>4、分享本页</span>
-								<div>
-									<div class="jiathis_style">
+								<div class="client">
+									<div class="jiathis_style PC child">
 										<a class="jiathis_button_qzone"></a>
 										<a class="jiathis_button_tsina"></a>
 										<a class="jiathis_button_tqq"></a>
 										<a class="jiathis_button_weixin"></a>
 										<a class="jiathis_button_renren"></a>
 									</div>
+									<div class="jiathis_style_m iPhone child"></div>
 								</div>
 							</p>
 							<p>5、有什么问题，请联系我们：
 								<div class="client">
-									<a class="PC" target="_blank" href="http://sighttp.qq.com/authd?IDKEY=02f31b91f66909dab361ec0ae47017131836dbd6572f62f0"><img border="0" src="http://wpa.qq.com/imgd?IDKEY=02f31b91f66909dab361ec0ae47017131836dbd6572f62f0&pic=51" alt="点击这里给我发消息" title="点击这里给我发消息"></a>
-									<a class="iPhone" target="_blank" href="mqqwpa://im/chat?chat_type=wpa&uin=438843562&version=1&src_type=web&web_src=oicqzone.com"><img border="0" src="http://wpa.qq.com/imgd?IDKEY=02f31b91f66909dab361ec0ae47017131836dbd6572f62f0&pic=51" alt="点击这里给我发消息" title="点击这里给我发消息"></a>
+									<a class="PC child" target="_blank" href="http://sighttp.qq.com/authd?IDKEY=02f31b91f66909dab361ec0ae47017131836dbd6572f62f0"><img border="0" src="http://wpa.qq.com/imgd?IDKEY=02f31b91f66909dab361ec0ae47017131836dbd6572f62f0&pic=51" alt="点击这里给我发消息" title="点击这里给我发消息"></a>
+									<a class="iPhone child" target="_blank" href="mqqwpa://im/chat?chat_type=wpa&uin=438843562&version=1&src_type=web&web_src=oicqzone.com"><img border="0" src="http://wpa.qq.com/imgd?IDKEY=02f31b91f66909dab361ec0ae47017131836dbd6572f62f0&pic=51" alt="点击这里给我发消息" title="点击这里给我发消息"></a>
 								</div>
 							</p>
 						</div>
@@ -163,7 +164,6 @@
 				<span>web交流网站|QQ群：1234567</span>
 			</div>
 		</div>
-		<script type="text/javascript" src="http://v3.jiathis.com/code/jia.js" charset="utf-8"></script>
 		<script src="js/homepage.js" type="text/javascript" charset="utf-8"></script>
 	</body>
 </html>
