--- a/djproject/index.html
+++ b/djproject/index.html
@@ -105,7 +105,9 @@
 										<a class="jiathis_button_weixin"></a>
 										<a class="jiathis_button_renren"></a>
 									</div>
-									<div class="jiathis_style_m iPhone child"></div>
+									<div class="iPhone child">
+										<div class="jiathis_style_m"></div>
+									</div>
 								</div>
 							</p>
 							<p>5、有什么问题，请联系我们：
