--- a/djproject/manager.html
+++ b/djproject/manager.html
@@ -33,6 +33,7 @@
 		</div>
 		<!--右边导航-->
 		<div class="daohang-left">
+			<span class="title"></span>
 			<div id="sub-list">
 				<ul id="sub-menu-1">
 					<li><i class="glyphicon glyphicon-star" aria-hidden="true"></i>子菜单11</li>
