--- a/djproject/articlemanage.html
+++ b/djproject/articlemanage.html
@@ -15,9 +15,11 @@
 			<div id="line-right"></div>
 			<div id="line-bottom"></div>
 			<div id="line-left"></div>
-			
 			<div class="form-content">
-				<div><span>文章名：</span><input type="text" id="name" value=""/></div>
+				<div>
+					<span>文章名：</span>
+					<input type="text" id="name" value=""/>
+				</div>
 				<div>
 					<span>文章类型：</span>
 					<select id="type">
@@ -26,14 +28,19 @@
 						<option value="3">html</option>
 					</select>
 				</div>
+				<div>
+					<span>排序等级：</span>
+					<input type="text" id="sort-level" value="1"/>
+				</div>
 			</div>
 		</div>
 		<div class="editer">
 			<div id="editer"></div>
 		</div>
-		
-		
-		
+		<div class="footer">
+			<span id="add">添加</span>
+			<span id="save">保存</span>
+		</div>
 		<script src="js/articlemanege.js" type="text/javascript" charset="utf-8"></script>
 	</body>
 </html>
