--- a/djproject/test.html
+++ b/djproject/test.html
@@ -25,15 +25,15 @@
 		<div style="width:600px">
 			<div style="padding:20px 0px 20px 0px;">亲爱的小明姨父：</div>
 			<p style="margin:0px 0px 10px 0px;">请点击下面的链接激活账号完成注册。（48小时内完成）</p>
-			<p style="margin:0px 0px 10px 0px;"><a href="http://www.baidu.com?tsetts=112341f5dsa1f5dsa1f23dasf5sa1f5dsa1f5s&from=1&id=134561551651&name=d2050838808">http://www.baidu.com?tsetts=112341f5dsa1f5dsa1f23dasf5sa1f5dsa1f5s&from=1&id=134561551651&name=d2050838808</a></p>
+			<a href="http://www.baidu.com?tsetts=112341f5dsa1f5dsa1f23dasf5sa1f5dsa1f5s&from=1&id=134561551651&name=d2050838808">
+				<p style="margin:0px 0px 10px 0px;word-wrap: break-word;word-break: break-all;">http://www.baidu.com?ttts=112341f5dsa1f5dsa1f23dasf5sa1f5dsa1f5s&from=1&id=134561551651&name=d2050838808</p>
+			</a>
 			<p style="margin:0px 0px 10px 0px;">如果该链接无法点击，请直接复制以上链接到浏览器访问激活。</p>
 			<div style="margin:5px 0px 5px 0px;border-bottom: 1px solid #000000;"></div>
-			<p style="padding-top:20px;">
-				<div>
-					<p>此信息由<a href="http://www.baidu.com">文章网</a>系统发出，请勿直接回复。</p>
-					<p>如有疑问请<a href="#">联系我们</a>。</p>
-				</div>
-			</p>
+			<div>
+				<p style="margin:5px 0px 5px 0px;font-size: 12px;">此信息由<a href="http://www.baidu.com">文章网</a>系统发出，请勿直接回复。</p>
+				<p style="margin:5px 0px 5px 0px;font-size: 12px;">如有疑问请<a href="#">联系我们</a>。</p>
+			</div>
 		</div>
 		
 		<script type="text/javascript">
